# eveswitcher

./: .gitignore  README.md  config.example.json  io.github.motrotz.eveswitcher.metainfo.xml  pyproject.toml
.github/workflows/: release.yml
assets/: io.github.motrotz.eveswitcher.desktop
eveswitcher/: __init__.py  __main__.py  app.py  config.py  groups.py  tray.py  x11.py
flatpak/: io.github.motrotz.eveswitcher.yml
