[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eveswitcher"
version = "1.0.0"
description = "X11 hotkey-based window switcher for EVE Online"
readme = "README.md"
license = {text = "WTFPL"}
authors = [
    {name = "motrotz", email = "motrotz@users.noreply.github.com"}
]
keywords = ["eve", "online", "window", "switcher", "x11", "hotkey"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: WTFPL",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.10"
dependencies = [
    "python-xlib",
    "pystray",
    "Pillow",
    "PyGObject",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/motrotz/eveswitcher"
Repository = "https://github.com/motrotz/eveswitcher"

[project.scripts]
eveswitcher = "eveswitcher.app:main"

[project.gui-scripts]
eveswitcher-gui = "eveswitcher.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eveswitcher*"]

[tool.setuptools.package-data]
eveswitcher = ["../assets/*"]
